# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.335 2005/09/30 20:16:50 wolf31o2 Exp $

  30 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  files/catalyst.conf:
  Updating default configuration for catalyst and updating version stamp,
  since we're beginning internal testing for release.

  15 Sep 2005; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  fix bug 106004 split strings into a list for empty and rm operation

  15 Sep 2005; Eric Edgar <rocket@gentoo.org>
  modules/livecd_stage2_target.py:
  Append slashes to directories so rsyncs work properly

  13 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec:
  Changing source_subpath for livecd-stage2 example for bug #101704.

  12 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  examples/livecd-stage2_template.spec, modules/livecd_stage2_target.py,
  targets/support/livecdfs-update.sh:
  Added livecd/xdm and livecd/xsession options. These are used to setup the
  default display manager and X session, respectively. Added supporting
  documentation to example spec files. Imported more work from my fsscript for
  the official LiveCD.

  12 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py:
  Changing default CHOST for x86 from i386-pc-linux to i686-pc-linux. For
  discussion, see bug #88777.

  12 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org> AUTHORS, +arch/sh.py,
  modules/generic_stage_target.py:
  Added sh architecture to supported architectures. Thanks to Matsuu Takuto
  <matsuu@gentoo.org> for the patch. Closing bug #105693.

  08 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/support/kmerge.sh, targets/support/livecdfs-update.sh:
  Add code to dump grppkgs.txt file on livecd-stage1 and kernelpkgs.txt file
  on livecd-stage2 and removing universal motd for livecd/type of